outros modulos e menus

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Cotador Web</span>
+      <span>SUPER Cotador Web</span>
     </mat-toolbar>
 
     <br/>
