rotas e links para novos modulos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,22 +7,22 @@
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/cotacao" class="mouse-pointer">
         <mat-icon class="icon-spacer">query_stats</mat-icon>
         Cotaçao
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/produtos" class="mouse-pointer">
         <mat-icon class="icon-spacer">book</mat-icon>
         Produtos
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/hospitais" class="mouse-pointer">
         <mat-icon class="icon-spacer">local_hospital</mat-icon>
         Hospitais
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/laboratorios" class="mouse-pointer">
         <mat-icon class="icon-spacer">science</mat-icon>
         Laboratorios
       </mat-list-item>
@@ -32,17 +32,17 @@
         Entidades
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/profissoes" class="mouse-pointer">
         <mat-icon class="icon-spacer">business_center</mat-icon>
         Profissoes
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/operadoras" class="mouse-pointer">
         <mat-icon class="icon-spacer">corporate_fare</mat-icon>
         Operadoras
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/administradoras" class="mouse-pointer">
         <mat-icon class="icon-spacer">business</mat-icon>
         Administradoras
       </mat-list-item>
@@ -52,7 +52,7 @@
         Usuarios
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item class="mouse-pointer">
+      <mat-list-item routerLink="/auditoria" class="mouse-pointer">
         <mat-icon class="icon-spacer">security</mat-icon>
         Auditoria
       </mat-list-item>
