--- a/src/app/components/administradora/administradora.component.html
+++ b/src/app/components/administradora/administradora.component.html
@@ -39,27 +39,27 @@
     <div>
       <mat-card>
         <mat-card-title>
-          <span *ngIf="adicionandoEntidade()">Adicionando Administradora</span>
-          <span *ngIf="editandoEntidade()">Editando Administradora</span>
-          <span *ngIf="!adicionandoEntidade() && !editandoEntidade()">Visualizando Administradora</span>
+          <span *ngIf="adicionandoAdministradora()">Adicionando Administradora</span>
+          <span *ngIf="editandoAdministradora()">Editando Administradora</span>
+          <span *ngIf="!adicionandoAdministradora() && !editandoAdministradora()">Visualizando Administradora</span>
 
           <span style="float: right; padding-left: 20px">
-          <a *ngIf="!editandoEntidade() && !adicionandoEntidade()" (click)="editarEntidade()">
+          <a *ngIf="!editandoAdministradora() && !adicionandoAdministradora()" (click)="editarAdministradora()">
             <mat-icon class="mouse-pointer">create</mat-icon>
           </a>
-          <a *ngIf="!editandoEntidade() && !adicionandoEntidade()" (click)="removerAdministradora()">
+          <a *ngIf="!editandoAdministradora() && !adicionandoAdministradora()" (click)="removerAdministradora()">
             <mat-icon class="mouse-pointer">delete</mat-icon>
           </a>
-          <a *ngIf="adicionandoEntidade()" (click)="salvarNovaAdministradora()">
+          <a *ngIf="adicionandoAdministradora()" (click)="salvarNovaAdministradora()">
             <mat-icon class="mouse-pointer">save</mat-icon>
           </a>
-          <a *ngIf="editandoEntidade()" (click)="atualizarAdministradora()">
+          <a *ngIf="editandoAdministradora()" (click)="atualizarAdministradora()">
             <mat-icon class="mouse-pointer">save</mat-icon>
           </a>
-          <a *ngIf="adicionandoEntidade()" (click)="cancelarAdicao()">
+          <a *ngIf="adicionandoAdministradora()" (click)="cancelarAdicao()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
-          <a *ngIf="editandoEntidade()" (click)="cancelarEdicao()">
+          <a *ngIf="editandoAdministradora()" (click)="cancelarEdicao()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
         </span>
@@ -69,7 +69,7 @@
         <mat-card-content>
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Nome</mat-label>
-            <input matInput placeholder="Nome" [disabled]="!adicionandoEntidade() && !editandoEntidade()"
+            <input matInput placeholder="Nome" [disabled]="!adicionandoAdministradora() && !editandoAdministradora()"
                    [(ngModel)]="AdministradoraEditando.nome">
           </mat-form-field>
         </mat-card-content>
