laboratorio.component.ts

--- a/src/app/components/laboratorio/laboratorio.component.html
+++ b/src/app/components/laboratorio/laboratorio.component.html
@@ -1,1 +1,89 @@
-<p>laboratorio works!</p>
+<div class="flex-container" xmlns="http://www.w3.org/1999/html">
+  <div>
+    <mat-card>
+      <mat-card-title>
+        <span>
+          Lista de Laboratorios
+        </span>
+        <span style="float: right">
+          <a (click)="adicionar()">
+            <mat-icon class="mouse-pointer">add</mat-icon>
+          </a>
+        </span>
+      </mat-card-title>
+      <br/>
+
+      <mat-card-content>
+        <mat-table [dataSource]="dataSourceLaboratorio" matSort class="mat-elevation-z8">
+          <ng-container matColumnDef="id">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
+            <mat-cell *matCellDef="let laboratorio" (click)="selecionaLaboratorio(laboratorio)" class="mouse-pointer"> {{laboratorio.id}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="nome">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
+            <mat-cell *matCellDef="let laboratorio" (click)="selecionaLaboratorio(laboratorio)" class="mouse-pointer"> {{laboratorio.nome}} </mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="local">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Local </mat-header-cell>
+            <mat-cell *matCellDef="let laboratorio" (click)="selecionaLaboratorio(laboratorio)" class="mouse-pointer"> {{laboratorio.local}} </mat-cell>
+          </ng-container>
+
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+        <mat-paginator [pageSizeOptions]="[15, 50, 100]" [length]="dataSourceLaboratorio.data.length" showFirstLastButtons></mat-paginator>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div *ngIf="laboratorioSelecionado" style="width: 20px"></div>
+
+  <div *ngIf="laboratorioSelecionado" style="flex-direction: column">
+    <div>
+      <mat-card>
+        <mat-card-title>
+          <span *ngIf="adicionandoLaboratorio()">Adicionando Laboratorio</span>
+          <span *ngIf="editandoLaboratorio()">Editando Laboratorio</span>
+          <span *ngIf="!adicionandoLaboratorio() && !editandoLaboratorio()">Visualizando Laboratorio</span>
+
+          <span style="float: right; padding-left: 20px">
+          <a *ngIf="!editandoLaboratorio() && !adicionandoLaboratorio()" (click)="editarLaboratorio()">
+            <mat-icon class="mouse-pointer">create</mat-icon>
+          </a>
+          <a *ngIf="!editandoLaboratorio() && !adicionandoLaboratorio()" (click)="removerLaboratorio()">
+            <mat-icon class="mouse-pointer">delete</mat-icon>
+          </a>
+          <a *ngIf="adicionandoLaboratorio()" (click)="salvarNovoLaboratorio()">
+            <mat-icon class="mouse-pointer">save</mat-icon>
+          </a>
+          <a *ngIf="editandoLaboratorio()" (click)="atualizarLaboratorio()">
+            <mat-icon class="mouse-pointer">save</mat-icon>
+          </a>
+          <a *ngIf="adicionandoLaboratorio()" (click)="cancelarAdicao()">
+            <mat-icon class="mouse-pointer">close</mat-icon>
+          </a>
+          <a *ngIf="editandoLaboratorio()" (click)="cancelarEdicao()">
+            <mat-icon class="mouse-pointer">close</mat-icon>
+          </a>
+        </span>
+        </mat-card-title>
+        <br/>
+
+        <mat-card-content>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Nome</mat-label>
+            <input matInput placeholder="Nome" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
+                   [(ngModel)]="laboratorioEditando.nome">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="width: 100%">
+            <mat-label>Local</mat-label>
+            <input matInput placeholder="Local" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
+                   [(ngModel)]="laboratorioEditando.local">
+          </mat-form-field>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
